Odd Numbers 1-100
Last login: Sun Jun 27 19:16:05 on ttys000
(base) christopherello@ChristophersMBP ~ % python
Python 3.8.8 (default, Apr 13 2021, 12:59:45) 
[Clang 10.0.0 ] :: Anaconda, Inc. on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> numbers = range (99)
>>> range(0,99)
range(0, 99)
>>> for number in numbers:
... if number % 2 !=0
  File "<stdin>", line 2
    if number % 2 !=0
    ^
IndentationError: expected an indented block
>>> for number in numbers:
... if number % 2 !=0
  File "<stdin>", line 2
    if number % 2 !=0
    ^
IndentationError: expected an indented block
>>> for number in numbers:
...     if number % 2 !=0
  File "<stdin>", line 2
    if number % 2 !=0
                    ^
SyntaxError: invalid syntax
>>> numbers = range (99)
>>> numbers
range(0, 99)
>>> for number in numbers:
... 
  File "<stdin>", line 2
    
    ^
IndentationError: expected an indented block
>>> numbers = range (99)
>>> numbers
range(0, 99)
>>> for number in numbers:
...     if number % 2 != 0
  File "<stdin>", line 2
    if number % 2 != 0
                     ^
SyntaxError: invalid syntax
>>> for number in numbers:
...     if number % 2 != 0:
...             print ( number )
... 
1
3
5
7
9
11
13
15
17
19
21
23
25
27
29
31
33
35
37
39
41
43
45
47
49
51
53
55
57
59
61
63
65
67
69
71
73
75
77
79
81
83
85
87
89
91
93
95
97
>>> 
